// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomTransactionLink with deposit matches the snapshot 1`] = `
<div
  class="css-mglgiq"
>
  <button
    class="css-1bzihpp"
    color="#9DB06A"
    type="button"
  >
    ?
  </button>
</div>
`;

exports[`CreateCustomTransactionLink with dispense matches the snapshot 1`] = `
<div
  class="css-mglgiq"
>
  <button
    class="css-1fvk27e"
    color="#E86C76"
    type="button"
  >
    ?
  </button>
</div>
`;
